@@ -3242,6 +3242,19 @@ dfaexec (struct dfa *d, char const *begin, char *end,
                 continue;
               }
 
+            /* Falling back to the glibc matcher in this case gives
+               better performance (up to 25% better on [a-z], for
+               example) and enables support for collating symbols and
+               equivalence classes.  */
+            if (backref)
+              {
+                *backref = 1;
+                free(mblen_buf);
+                free(inputwcs);
+                *end = saved_end;
+                return (char *) p;
+              }
+
             /* Can match with a multibyte character (and multi character
                collating element).  Transition table might be updated.  */
             s = transit_state(d, s, &p);
